feat(cicd): first implement
* optimize versioning and repair test

* part deploy is prepare but not try actually

* expose part quality