@@ -11,10 +11,14 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
-    <groupId>pmeig.spring.libraries</groupId>
-    <artifactId>spring-parent</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <groupId>io.github.pmeig</groupId>
+    <artifactId>spring-libraries</artifactId>
+    <version>1.0.0</version>
     <packaging>pom</packaging>
+
+    <name>spring-libraries</name>
+    <description>Spring utility libraries by pmeig</description>
+    <url>https://github.com/pmeig/spring-libraries</url>
 
     <contributors>
         <contributor>
@@ -38,17 +42,43 @@
         </developer>
     </developers>
 
+    <licenses>
+        <license>
+            <name>Mozilla Public License 2.0</name>
+            <url>https://www.mozilla.org/en-US/MPL/2.0/</url>
+        </license>
+    </licenses>
+
+    <scm>
+        <connection>scm:git:git://github.com/pmeig/spring-libraries.git</connection>
+        <developerConnection>scm:git:ssh://github.com/pmeig/spring-libraries.git</developerConnection>
+        <url>https://github.com/pmeig/spring-libraries</url>
+    </scm>
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.test-plugin.version>2.22.2</maven.test-plugin.version>
-        <java.version>25</java.version>
+        <java.version>26</java.version>
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <maven.compiler.source>${java.version}</maven.compiler.source>
-        <maven.source-plugin.version>3.4.0</maven.source-plugin.version>
-        <junit.version>5.10.0</junit.version>
         <kotlin.code.style>official</kotlin.code.style>
         <kotlin.compiler.jvmTarget>25</kotlin.compiler.jvmTarget>
-        <kotlin.version>2.3.0</kotlin.version>
+        <argLine> </argLine>
+
+
+        <maven.test-plugin.version>3.5.6</maven.test-plugin.version>
+        <maven.source-plugin.version>3.4.0</maven.source-plugin.version>
+
+        <mokito-kotlin.version>6.3.0</mokito-kotlin.version>
+        <google-gcp.version>8.0.4</google-gcp.version>
+
+        <pmeig-swagger.version>1.0.0-SNAPSHOT</pmeig-swagger.version>
+        <pmeig-logger.version>1.0.0-SNAPSHOT</pmeig-logger.version>
+        <pmeig-cache.version>1.0.0-SNAPSHOT</pmeig-cache.version>
+        <pmeig-security.version>1.0.0-SNAPSHOT</pmeig-security.version>
+        <pmeig-jpa.version>1.0.0-SNAPSHOT</pmeig-jpa.version>
+        <pmeig-error.version>1.0.0-SNAPSHOT</pmeig-error.version>
+
+        <kotlin.version>2.3.21</kotlin.version>
         <kotlin.test.skip>false</kotlin.test.skip>
         <kotlin.source.skip>false</kotlin.source.skip>
     </properties>
@@ -62,7 +92,7 @@
             </properties>
         </profile>
         <profile>
-            <id>source</id>
+            <id>release</id>
             <properties>
                 <kotlin.test.skip>true</kotlin.test.skip>
             </properties>
@@ -80,7 +110,7 @@
             <dependency>
                 <groupId>com.google.cloud</groupId>
                 <artifactId>spring-cloud-gcp-dependencies</artifactId>
-                <version>8.0.1</version>
+                <version>${google-gcp.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -99,6 +129,8 @@
                     <version>${maven.test-plugin.version}</version>
                     <configuration>
                         <skipTests>${kotlin.test.skip}</skipTests>
+                        <!--suppress UnresolvedMavenProperty -->
+                        <argLine>@{argLine} -javaagent:${org.mockito:mockito-core:jar} -XX:+EnableDynamicAgentLoading</argLine>
                     </configuration>
                 </plugin>
                 <plugin>
@@ -160,7 +192,7 @@
                             <id>attach-sources</id>
                             <phase>verify</phase>
                             <goals>
-                                <goal>jar</goal>
+                                <goal>jar-no-fork</goal>
                             </goals>
                         </execution>
                     </executions>
@@ -171,7 +203,7 @@
             <plugin>
                 <groupId>pmeig.plugins</groupId>
                 <artifactId>additional-metadata</artifactId>
-                <version>1.0.0-SNAPSHOT</version>
+                <version>1.0.0</version>
                 <executions>
                     <execution>
                         <id>scan-metadata</id>
@@ -204,9 +236,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <argLine>@{argLine} -javaagent:${org.mockito:mockito-core:jar}</argLine>
-                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -238,7 +267,7 @@
         <dependency>
             <groupId>org.mockito.kotlin</groupId>
             <artifactId>mockito-kotlin</artifactId>
-            <version>6.3.0</version>
+            <version>${mokito-kotlin.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
